# modelproxy

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs  config.example.json  modelproxy-gui.rc  request_flow.drawio
.cargo/: config.toml
migrations/: init.sql
src/: lib.rs  main.rs
src/admin/: mod.rs  models.rs  settings.rs  upstreams.rs  users.rs
src/api_keys/: handlers.rs
src/audit/: handlers.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
src/config/: mod.rs
src/db/: api_keys.rs  audit.rs  conversations.rs  mod.rs  model_visibility.rs  tenants.rs  upstreams.rs  usage.rs  users.rs
src/models/: api_key.rs  audit.rs  conversation.rs  mod.rs  sql_uuid.rs  tenant.rs  upstream.rs  usage.rs  user.rs
src/proxy/: blocker.rs  error_log.rs  handlers.rs  mod.rs  rate_limiter.rs  upstream.rs
src/store/: file_audit_log.rs  mod.rs  proxy_log_writer.rs
src/usage/: handlers.rs
src/utils/: error.rs  mod.rs  secrets.rs
static/: index.html
static/css/: style.css
static/js/: app.js  i18n.js
